<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ref">This is reference!</string>
    <string name="email_address_es_">Email Address(es):</string>
    <string name="hateful_outro">Hateful Outro:</string>
    <string name="person_s_name_">Person\'s Name:</string>
    <string name="send_email">Send Email</string>
    <string name="intro_">Introduction:</string>
    <string name="things_that_this_person_does_">Things that this person does:</string>
    <string name="closing_text_">Closing Text:</string>
    <string name="location">Enter a valid city:</string>
    <string name="country">Country:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="weather">Get Weather</string>
    <string name="banner_ad_unit_id">ca-app-pub-3623525206696685/3148770853</string>

</resources>